--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <input class="inputs" placeholder="Usuário:" type="text">
         <label> </label>
         <input class="inputs" placeholder="Senha:" type="password">
-        <button class="btnEntrar">Entrar</button>
+        <button class="btnEntrar" onclick="TentativaDeLogin()">Entrar</button>
         <span>*Aperte 'ESC' para sair</span>
         </div>
       </div>
